# tesla-broker

./: .gitignore  Dockerfile  fly.toml  main.py  procfile  pyproject.toml  seed.py
core/: admin.py  backends.py  context_processors.py  email_utils.py  forms.py  middleware.py  models.py  notifications.py  signals.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_remove_wallettransaction_reference_and_more.py  0003_wallettransaction_destination.py  0004_alter_investmentplan_options_and_more.py  0005_alter_investmentplan_cycle.py  0006_alter_wallettransaction_transaction_type.py  0007_notification.py  0008_remove_kycverification_id_back_and_more.py  0009_alter_profile_kyc_tier.py  0010_profile_previous_kyc_status_and_more.py  0011_emailverificationcode.py  0012_kycverification_id_back_and_more.py  0013_remove_kycverification_id_back_and_more.py  (+9 more)
main/: settings.py  urls.py
staticfiles/: staticfiles.json
templates/: about.html  access_code.html  blog.html  careers.html  change_password.html  dashboard.html  deposit.html  deposit_confirm.html  help.html  home.html  index.html  inventory.html  investments.html  kyc.html  login.html  notifications.html  orders.html  password_reset.html  password_reset_confirm.html  password_reset_done.html  portfolio.html  privacy.html  profile.html  register.html  security.html  settings.html  stock_confirm.html  stock_detail.html  stocks.html  terms.html  two_factor.html  vehicle_detail.html  vehicle_order_confirm.html  vehicle_order_success.html  verify_email.html  wallet.html  withdraw.html  withdraw_confirm.html
(+6 files in other folders)
