[project]
name = "tesla-broker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "boto3>=1.43.36",
    "django>=5.2.15",
    "django-storages>=1.14.6",
    "dotenv>=0.9.9",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "poetry>=2.4.1",
    "psycopg2>=2.9.12",
    "requests>=2.34.2",
    "resend>=2.32.2",
    "uuid>=1.30",
    "whitenoise>=6.12.0",
]
